2008-06-30  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

Reviewed by Oliver.

        Bug 19830: REGRESSION (r34883): Google Reader doesn't show up feed list on sidebar
        <https://bugs.webkit.org/show_bug.cgi?id=19830>

        Ensure that we do not eliminate a write to a local register when doing
        peephole optimizations.

        JavaScriptCore:

        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::emitJumpIfTrue):
        (KJS::CodeGenerator::emitJumpIfFalse):

        LayoutTests:

        * fast/js/codegen-peephole-locals-expected.txt: Added.
        * fast/js/codegen-peephole-locals.html: Added.
        * fast/js/resources/codegen-peephole-locals.js: Added.


Canonical link: https://commits.webkit.org/27346@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34903 268f45cc-cd09-0410-ab3c-d52691b4dbfc